# rust-server-harness

./: Cargo.toml  LICENSE  README.md
crates/graphql-operation-server-harness/: Cargo.toml  README.md
crates/graphql-operation-server-harness/examples/: simple.rs
crates/graphql-operation-server-harness/src/: error.rs  lib.rs
crates/graphql-operation-server-harness/src/adapters/gateways/: mod.rs
crates/graphql-operation-server-harness/src/adapters/gateways/async_graphql/: mod.rs  server.rs
crates/graphql-operation-server-harness/src/entities/: collected_request.rs  field.rs  handler.rs  mod.rs  operation.rs  scenario.rs
crates/graphql-operation-server-harness/src/use_cases/: create_scenario.rs  mod.rs
crates/graphql-operation-server-harness/src/use_cases/ports/: collector.rs  server.rs
crates/graphql-operation-server-harness/tests/: integration_tests.rs
crates/grpc-rpc-server-harness/: Cargo.toml  README.md
crates/grpc-rpc-server-harness/examples/: simple.rs
crates/grpc-rpc-server-harness/src/: error.rs  lib.rs
crates/grpc-rpc-server-harness/src/adapters/gateways/: mod.rs
crates/grpc-rpc-server-harness/src/adapters/gateways/tonic/: mod.rs  server.rs
crates/grpc-rpc-server-harness/src/entities/: execution_result.rs  handler.rs  message.rs  method.rs  mod.rs  scenario.rs  service.rs
crates/grpc-rpc-server-harness/src/use_cases/: create_scenario.rs
crates/grpc-rpc-server-harness/src/use_cases/ports/: collector.rs  server.rs
crates/grpc-rpc-server-harness/tests/: integration_tests.rs
crates/http-endpoint-server-harness/: Cargo.toml  README.md
crates/http-endpoint-server-harness/examples/: simple.rs
crates/http-endpoint-server-harness/src/: error.rs  lib.rs
crates/http-endpoint-server-harness/src/adapters/gateways/: mod.rs
crates/http-endpoint-server-harness/src/adapters/gateways/axum/: mod.rs  server.rs
crates/http-endpoint-server-harness/src/entities/: endpoint.rs  handler.rs  method.rs  mod.rs  request.rs  response.rs  scenario.rs
crates/http-endpoint-server-harness/src/use_cases/: create_scenario.rs
crates/http-endpoint-server-harness/src/use_cases/ports/: collector.rs  mod.rs  server.rs
crates/http-endpoint-server-harness/tests/: integration_tests.rs
