[workspace]
resolver = "2"
members = [
  "crates/http-endpoint-server-harness",
  "crates/grpc-rpc-server-harness",
  "crates/graphql-operation-server-harness",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Poncet"]
license = "MIT"
repository = "https://github.com/nathan-poncet/rust-server-harness"

[workspace.dependencies]
async-trait = "0.1"
thiserror = "2.0"
tokio = { version = "1.49", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
reqwest = "0.13"

# HTTP
axum = "0.8"

# gRPC
tonic = "0.14"
prost = "0.14"

# GraphQL
async-graphql = "7.2"
