[package]
name = "http-endpoint-server-harness"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "HTTP endpoint server harness for testing mock endpoints"
repository.workspace = true
readme = "README.md"
keywords = ["http", "testing", "mock", "server", "harness"]
categories = ["development-tools::testing", "web-programming"]

[features]
default = ["axum"]
axum = ["dep:axum", "dep:tokio"]
doctest = ["reqwest"]

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

# Axum
axum = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

# Optional for doctests
reqwest = { workspace = true, features = ["json"], optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
reqwest = { workspace = true, features = ["json"] }
futures.workspace = true

